chore: working on adding another functionality

--- a/client/.env.local
+++ b/client/.env.local
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="postgresql://admin:admin@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 
