--- a/client/.env
+++ b/client/.env
@@ -27,7 +27,7 @@ APP_SECRET=62fd75cf166f05bb1b490fa1c441dfc6
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+##DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 
 
 ###> symfony/messenger ###
